kubernetes-adv-deployments/part-11-ingress-aws/my-examples/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Guy Dvorkin 2023
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.notjustdevops.com

    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80

  - host: web1.notjustdevops.com
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: web2.notjustdevops.com
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: cat.notjustdevops.com
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
